@@ -1,3 +1,9 @@
+2011-09-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.h,
+	  support/regression/tests/bug3404101.c:
+	  Fixed bug #3404101.
+
 2011-09-04 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* Makefile.in: added some dependencies to fix bug 3148465
